# paper-with-me

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: backfill-data.yml  build-data.yml  ci.yml  deploy-hf.yml  update-data.yml  verify-app.yml
app/: __init__.py  api.py  bootstrap.py  main.py  queries.py
app/static/: manifest.webmanifest  offline.html  sw.js
app/templates/: _mathjax.html  _paper_card.html  base.html  board.html  dataset.html  datasets.html  digest.html  error.html  index.html  method.html  methods.html  models.html  paper.html  papers.html  search.html  sota.html  task.html  trends.html
docs/: ARCHITECTURE.md  DEPLOY.md  FEATURES.md  ROADMAP.md
pwc/: __init__.py  cli.py  contrib.py  db.py  download.py  ingest.py  sources.py
pwc/collectors/: __init__.py  arxiv.py  auto_tag.py  external_boards.py  github_links.py  hf_models.py  hf_papers.py  results_extract.py
scripts/: crawl_check.py  deploy_hf.py  merge_live_data.py  profile_routes.py  smoke_check.py
tests/: test_api.py  test_backfill.py  test_bootstrap.py  test_cli.py  test_collectors.py  test_contrib.py  test_deploy_hf_guard.py  test_download_retry.py  test_external_boards.py  test_features.py  test_fixes_round4.py  test_fts_sync.py  test_ingest.py  test_merge_live_data.py  test_parquet.py  test_queries.py  test_results_extract.py  test_review_fixes.py  test_sources.py  test_ui_parity.py  test_usability.py  test_web.py
tests/fixtures/: arxiv-feed.xml  datasets.json  evaluation-tables.json  github-search.json  hf-daily.json  (+4 more)
(+2 files in other folders)
