[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pwc-restore"
version = "0.1.0"
description = "Papers with Code 아카이브 복원 데이터 파이프라인"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
stream = ["ijson>=3.2"]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["pwc"]
